# tt-github-actions

./: .gitignore  .pre-commit-config.yaml  LICENSE  Queries  Readme.md
.github/actions/ai_summary/tool/: .gitignore  CLAUDE.md  DESIGN.md  pyproject.toml
.github/actions/ai_summary/tool/ai_job_summary/: __init__.py  cli.py  config.py  config_context.py  context.py  extract.py  extract_configs.py  summarize.py
.github/actions/ai_summary/tool/ai_job_summary/config/: analysis.yaml
.github/actions/ai_summary/tool/ai_job_summary/tests/: conftest.py  test_cli.py  test_config.py  test_config_context.py  test_detection_patterns.py  test_extraction.py  test_log_complete.py  test_status.py  test_summarize.py
.github/actions/ai_summary/tool/ai_job_summary/tests/fixtures/log_samples/: app_cli_argparse.txt  infra_docker_pull_failure.txt  infra_network_dns.txt  model_evals_below_target.txt  model_load_failure.txt  pytest_failed_adjacent_skip.txt  (+7 more)
.github/actions/ai_summary/tool/ai_run_summary/: __init__.py  aggregate.py  cli.py  commits.py  format.py  models.py  narrative.py  parse.py  serialize.py
.github/actions/ai_summary/tool/ai_run_summary/tests/: conftest.py  test_aggregate.py  test_cli.py  test_commits.py  test_format.py  test_models.py  test_narrative.py  test_parse.py  test_serialize.py
.github/actions/ai_summary/tool/ai_run_summary/tests/fixtures/: crashed_dispatch_timeout.json  crashed_memory_oom.json  evals_below_target.json  infra_failure_no_logs.json  success_healthy.json  tests_failed_connection.json
.github/actions/ai_summary/tool/common/: llm_client.py
(+172 files in other folders)
