[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-job-summary"
version = "0.1.0"
description = "AI-powered CI job log summarization for Tenstorrent projects"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai-job-summary = "ai_job_summary.cli:main"
ai-run-summary = "ai_run_summary.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_job_summary", "ai_run_summary", "common"]

[tool.pytest.ini_options]
testpaths = ["ai_job_summary/tests", "ai_run_summary/tests"]
pythonpath = ["."]
